# Homelab

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml
backend/homelab_back/: .env  Cargo.toml  Dockerfile  Justfile  build.rs
backend/homelab_back/.sqlx/: query-07e288452b64124903fe138bd3cd2dc4c47c6122204eb75b5a4f82bc652d0245.json  query-08060605e6dbe54f1ac30b7807103deb4f4b60064c4d145e2cbfbff64a939b17.json  query-0ad9c7bf674677b68adbaa11880202d7bc17897283727f402a9f11317df34d44.json  query-1365c48e31be669f24ed099fe2ed6367b544b7f2e3b7fbf8ed32c05b3eea24f0.json  query-1ffe26f89684659ad3746d4dce7bddac008fb3c16e250043bd1a25b70522745d.json  query-220d39dafbef149425a2bbe7e0d01b3ff4cb4c767e47a91eb0bd157a1e6461d1.json  query-24e140d146afcc45b3e69efc4a9ff3183fc365df35d941a3325584519a2847d9.json  query-2cc0b04cc8ab75d344fdaf5e90886409ce0302ccf200ab8e1192aff851ca5ef3.json  query-3379116af5755560a61bce0929ac35bf5defa8ce17bbd5801d433e044c8a6660.json  query-43bbd26d5cc29c73e7dc40edf22f4131577c3b7725e88e94192c742a9426cadc.json  query-47a3e5ca679068ac70675ea6d6cccf76c6c8f0e99877586cfc6355ec4e5cc002.json  query-480aa0fd0284c642d6e39ea306f5e6aef5f6f7ba3c859a1fbe2dbcc7fd2e34eb.json  query-493e0bae24404630788c6dc477fb3aa562ae161d30b1bc3a4bb753bde48d8a66.json  query-59f9e4606f5aa58b3967c28ef0c514c58067ba8cd53e7169734c9b1e53ec4e7e.json  query-5a25b7e9bafb01daa560f04045ebca435f3a1ccc0a814ad5bf77d69f2027c147.json  query-5aa252c4a7bbe5efe7019d3ff1cc5d9e7e7a5c3f531a53b7979d6bbc2f171ad6.json  query-5ad2d1685c17323f9deb980e335543d79a68ea82f114ff118fb7864af95687c4.json  query-5f07aef06c0ac96a48c06b0c26e146ce6fd68c20d53cb47ee5d4fe0eba6597f7.json  query-5fccca1c29b360b0f001a177fe4b7ecdc291294d7b8420ec978f1fad7d70ed0a.json  query-6384d9d5d7a96b2b3401a513cf822d4407d351913083b261f74cf2db75635868.json  query-65a0ddbc3e3ebacca31fd9600d8cfbdd9174a745793a0958fda92c96f4f811a5.json  query-6b29144e7c79865a288d57a72f0986df19c98f96fba25d37640bd74a849d93f5.json  query-6c71d5f75081b04b4dc570a542510336d7a82fc120da43107056807bd53572fb.json  query-80f378e67ea7cd6ec82f89d99de16c3e054d274cc902c76de8de0ad2f63feb46.json  query-815eb596cd839c20342078b47673f1ad818796943aa27a3437c98661536c6fd4.json  query-82ff2aa306011ae5832fbeae97816e29fc4372e5c800bbfabda4cdf98c10b580.json  query-850b63f020aeca835875f605410d4666194fe1a3589b3e5c87a375b62e867b0d.json  query-852a4ea8abe8f8b375028e89b4878fa2aecb90d4021523fa3778dd0c40f61de6.json  query-880f777fa7fc784c1e11d59f06a8fce14fe87787ca572c5aa699c1fe3784af92.json  query-88917f7cadf62d9e8cf1639b196cca04880fe0e0fa66f19872b794503643c4ab.json  query-8a1209773909d0c033e065a4f1f35cbd7a7135ceadbaf4f72d81e2e84dea2dba.json  query-8b9b0490beef7118dc8a3e6436970e81c5c8f6f986061e09c33a0b767f432df8.json  query-94a4cf1419ab298b00a9011ebe45fa43cb616444e5c9263a947d11f54a6da11e.json  query-999e954e5ea8a20d162f06e8c58f654ced1b312534a8e35e77235c0bc3317b4c.json  query-9d790e5fad117751a25a8a3342120e72f7c5beb3a68c3a6d99d474b2953ba845.json  query-a1b5d156f10255c01868654d39a1fe7b29248415eee45a7a93042c8f4826c978.json  query-a1e7b738d2756a6302bacf95aad6d970b1b3d973a5ad6cc3a23ecf39010e8147.json  query-a47b51da823dfb79fcb598543ec24f494372311b94115ca21e4fc77e2d77dde5.json  query-a5f709a83ad9e00b083a7969769e247c6b711ae00092c927c90fab5e2100e2ad.json  query-a738d7f4736bac293fa8dc799dc74c61d3e403eb92aa8a00345daf36b5fbc15a.json  (+28 more)
backend/homelab_back/apps/admin-console/: Cargo.toml  Dockerfile
backend/homelab_back/apps/admin-console/.sqlx/: query-0e573a3e152ae268e2fb75d015f73d8d90347cc80af76b385ffdc94c310812f1.json  (+13 more)
backend/homelab_back/apps/nas-server/: Cargo.toml  Dockerfile
backend/homelab_back/apps/user-management/: Cargo.toml  Dockerfile
backend/homelab_back/libs/core/: Cargo.toml
backend/homelab_back/libs/proto/: Cargo.toml  build.rs
backend/homelab_back/migrations/: 20250728182406_create_db.sql  20251121215835_initial_setup.down.sql  20251121215835_initial_setup.up.sql  20260113220545_initial_schema.down.sql  20260113220545_initial_schema.up.sql
backend/homelab_back/proto/: file.proto  file_label.proto  folder.proto  global_file.proto  label.proto  types.proto  user.proto  white_listed_user.proto
backend/homelab_back/scripts/: prepare.sh
backend/homelab_back/src/: constants.rs  main.rs
backend/homelab_back/src/data/: create_user_command.rs  create_white_listed_user_command.rs  file_data.rs  mod.rs  update_file_name_command.rs  update_folder_name_command.rs  upload_file_command.rs
backend/homelab_back/src/db/: file_label_repository.rs  file_repository.rs  folder_repository.rs  global_file_repository.rs  label_repository.rs  mod.rs  shared_file_repository.rs  user_repository.rs  white_listed_user_repository.rs
backend/homelab_back/src/domain/: action_log.rs  file.rs  file_label.rs  folder.rs  global_file.rs  label.rs  mod.rs  user.rs  white_listed_user.rs
backend/homelab_back/src/exception/: data_error.rs
backend/homelab_back/src/grpc/: file_grpc_service.rs  file_label_grpc_service.rs  folder_grpc_service.rs  global_file_grpc_service.rs  grpc_label_service.rs  mod.rs  user_grpc_service.rs  white_listed_user_grpc_service.rs
backend/homelab_back/src/handler/: file_handler.rs  folder_handler.rs  mod.rs  shared_file_handler.rs  user_handler.rs  white_listed_user_handler.rs
backend/homelab_back/src/helpers/: error_mapping.rs  error_mapping_grpc.rs  mod.rs  proto_mappers.rs
backend/homelab_back/src/jobs/: delete_cron_job.rs
backend/homelab_back/src/pb/: mod.rs
backend/homelab_back/src/service/: file_label_service.rs  file_service.rs  file_uploader.rs  folder_service.rs  global_file_service.rs  io_service.rs  label_service.rs  mod.rs  preview_service.rs  shared_file_service.rs  user_service.rs  white_listed_user_service.rs
backend/homelab_back/src/types/: mod.rs  user_email.rs
desktop/: Justfile  (+3 more)
desktop/src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  utils.rs
desktop/src-tauri/src/commands/: file.rs  folder.rs  mod.rs  storage_profile.rs  user.rs
desktop/src-tauri/src/helpers/: mappings.rs
desktop/src-tauri/src/types/: model.rs
(+260 files in other folders)
