[package]
name = "HomelabBack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full", "fs", "io-util"] }

actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
actix-multipart = "0.7"
futures = "0.3"

tonic = "0.13.1"
prost = "0.14.1"
tonic-web = "0.13.1"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "json", "uuid", "time" ] }

dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["serde-well-known", "macros"] }
env_logger = "0.11.3"
async-recursion = "1.0"

# For logging and diagnostics
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "2.0.12"
async-trait = "0.1.89"
tempfile = "3.23.0"
once_cell = "1.21.3"

[dev-dependencies]
testcontainers = "0.19.0"

testcontainers-modules = { version = "0.7.0", features = ["postgres"] }

once_cell = "1.19"

[build-dependencies]
tonic-build = "0.13.1"
protoc-bin-vendored = "3.0"

