[package]
name = "HomelabBack"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full", "fs", "io-util"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

actix-web = "4.8.0"
actix-files = "0.6"
serde = { version = "1.0.203", features = ["derive"] }

tonic = "0.13.1"
prost = "0.13"
prost-types = "0.13"

sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "json", "uuid", "time" ] }

dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["serde-well-known", "macros"] }
env_logger = "0.11.3"
async-recursion = "1.0"

image = "0.25.1"
fast_image_resize = "3.0"

# For logging and diagnostics
tracing = "0.1.40"
thiserror = "2.0.12"
async-trait = "0.1.89"

derive-new = "0.7.0"

[dev-dependencies]

[build-dependencies]
tonic-build = "0.13.1"
protoc-bin-vendored = "3.0"

