[workspace]
members = [
#    "apps/nas-server",
#    "libs/core",
    "libs/proto"
]
resolver = "2"

[workspace.dependencies]
# --- Core Async & Web ---
tokio = { version = "1.38.0", features = ["full", "fs", "io-util"] }
futures = "0.3"
async-recursion = "1.0"
async-trait = "0.1.89"

# --- Web Server ---
actix-web = "4.8.0"
actix-files = "0.6"
tower-http = { version = "0.6.6", features = ["cors", "trace"] } # Added this back from your original list

# --- Serialization ---
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120" # Added this back from your original list

# --- gRPC ---
tonic = "0.13.1"
prost = "0.13"
prost-types = "0.13"

tonic-build = "0.13.1"
protoc-bin-vendored = "3.0"

# --- Database ---
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "json", "uuid", "time" ] }

# --- Utilities ---
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["serde-well-known", "macros"] }
derive-new = "0.7.0"
tokio-cron-scheduler = "0.15.1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }

# --- Image Processing ---
image = "0.25.1"
fast_image_resize = "3.0"

# --- Logging & Error Handling ---
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
env_logger = "0.11.3"
thiserror = "2.0.12"