[package]
name = "desktop"
version = "0.1.0"
description = "My Homelab NAS Client"
authors = ["Leonid Romaniukha:@leora26"]
edition = "2021"


[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"
protoc-bin-vendored = "3.2.0"


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }

tonic = "0.12"

prost = "0.13"

prost-types = "0.13"
