[package]
name = "admin-console"
version = "0.1.0"
edition = "2021"

[dependencies]
homelab-core = { path = "../../libs/core" }
homelab-proto = { path = "../../libs/proto" }

prost-types = {workspace = true}
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
async-trait = {workspace = true}
actix-web = {workspace = true}
derive-new = {workspace = true}
uuid = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
lapin = { workspace = true }
serde_json = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}